...
        android:gravity="end"
        android:text="8000BC"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/radioGroup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBaseline_toBaselineOf="@id/tvCivilization"
        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/tvCalamityBonus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
...
        app:layout_constraintTop_toBottomOf="@id/tvCalamityBonus"
        app:layout_constraintBottom_toTopOf="@id/guidelineMitte"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/tvMBA" />

    <TextView
        android:id="@+id/tvVp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="8dp"
        android:text="VP"
        android:textStyle="bold"
...
