<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/ic_dashboard"
        android:title="@string/menu_item_home" />
    <item
        android:id="@+id/buyingFragment"
        android:icon="@drawable/ic_shopping_cart"
        android:title="@string/menu_item_buying" />
    <item
        android:id="@+id/inventoryFragment"
        android:icon="@drawable/ic_inventory"
        android:title="@string/menu_item_purchases" />
    <item
        android:id="@+id/allCardsFragment"
        android:icon="@drawable/ic_all_cards"
        android:title="@string/menu_item_all_cards" />
    <item
        android:id="@+id/tipsFragment"
        android:icon="@drawable/ic_lightbulb"
        android:title="@string/menu_item_tips" />
    <item
        android:id="@+id/menu_newGame"
        android:icon="@drawable/ic_delete"
        android:title="@string/menu_new_game"/>
    <item
        android:id="@+id/settingsFragment"
        android:icon="@drawable/ic_settings"
        android:title="@string/menu_item_settings"
        />
    <item
        android:id="@+id/aboutFragment"
        android:icon="@drawable/ic_info"
        android:title="@string/menu_item_about" />
</menu>